--- a/styles/auth.css
+++ b/styles/auth.css
@@ -10,8 +10,7 @@ section{
     align-items: center;
     min-height: 100vh;
     width: 100%;
-    
-    background: url('Untitled.png')no-repeat;
+    background: url('/img/Untitled.png') no-repeat;
     background-position: center;
     background-size: cover;
 }
