--- a/styles/style.css
+++ b/styles/style.css
@@ -182,7 +182,7 @@ body {
   font-weight: bold;
 }
 .watch-button {
-  background-color: #4dbf00;
+  background-color: #572222;
   color: white;
   padding: 10px 20px;
   border-radius: 10px;
