--- a/templates/categories.html
+++ b/templates/categories.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/categories.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/categories.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <title>Movie Categories</title>
@@ -36,7 +36,7 @@
         <div class="content-container" id="moviesContainer">
         </div>
     </div>
-    <script src="js/categories.js"></script>
+    <script src="{{ url_for('static', filename = 'js/categories.js') }}"></script>
 </body>
 
 </html>
