--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="styles/auth.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename = 'css/auth.css') }}">
   <title>HASH TECHIE OFFICIAL</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
                     </div>
                     <button type="submit">Log in</button>
                     <div class="register">
-                        <p>Don't have an account <a href="/templates/register.html" class="login-link"><button type="button">Register</button></a></p>
+                        <p>Don't have an account <a href='{{ url_for("register")}}' class="login-link"><button type="button">Register</button></a></p>
                     </div>
                     {% if error %}
                         <p style="color: red;">{{ error }}</p>
